--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -46,7 +46,7 @@ body {
     padding-bottom: 1em;
 }
 
-.btn-convert {
+.btn-search {
     background-color: rgb(219, 123, 243);
     cursor: pointer;
 }
@@ -70,4 +70,13 @@ body {
     Font-size: 1.5em;
     font-weight: bold;
     margin-top: .25em;
+}
+
+.resCard {
+    background-color: lightgray;
+    max-width: 400px;
+    margin: 80px auto;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
