--- a/web/src/App.css
+++ b/web/src/App.css
@@ -6,9 +6,8 @@
     --secondary: #285b5e;
 }
 
-#header {
+.header {
     background-color: var(--title);
-    color: white;
 }
 
 .container > .card_bg {
