Refactor Search Results, Detail, Edit
Search cards now grid and link, Details Page now takes in state data, Edit page takes state data from Details

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -10,12 +10,12 @@
     background-color: var(--title);
 }
 
-.container > .card_bg {
+.row > .col > .card_bg {
     background-color: var(--primary_light);
     color: black;
 }
 
-.container > .card_bg__alt {
+.row > .col > .card_bg__alt {
     background-color: var(--secondary);
     color: black;
 }
