Refactor search results, take out edit for PR
Search results had an error due to how Bootstrap does cards and our setup, so needed a more custom solution.

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -10,14 +10,16 @@
     background-color: var(--title);
 }
 
-.row > .col > .card_bg {
+.row > .container > .card_bg {
     background-color: var(--primary_light);
     color: black;
+    min-height: 18.5rem;
 }
 
-.row > .col > .card_bg__alt {
+.row > .container > .card_bg__alt {
     background-color: var(--secondary);
     color: black;
+    min-height: 18.5rem;
 }
 
 .search {
