Mftcodes/search and details (#10)
* Added routing

This will help us work out edit pages, and sign-up and sign-in.

* Base of form built out

need to work on putting together values to send to API

* Added a Res Details page

need to link from results.

* Refactor Search Results, Detail, Edit

Search cards now grid and link, Details Page now takes in state data, Edit page takes state data from Details

* Refactor search results, take out edit for PR

Search results had an error due to how Bootstrap does cards and our setup, so needed a more custom solution.

* Clean up comments

* Update msg

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -6,19 +6,20 @@
     --secondary: #285b5e;
 }
 
-#header {
+.header {
     background-color: var(--title);
-    color: white;
 }
 
-.container > .card_bg {
+.row > .container > .card_bg {
     background-color: var(--primary_light);
     color: black;
+    min-height: 18.5rem;
 }
 
-.container > .card_bg__alt {
+.row > .container > .card_bg__alt {
     background-color: var(--secondary);
     color: black;
+    min-height: 18.5rem;
 }
 
 .search {
