--- a/web/src/App.css
+++ b/web/src/App.css
@@ -57,3 +57,25 @@
     max-height: 55svh;
     overflow-y: scroll;
 }
+
+.spinner {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+.footie {
+    background-color: var(--title);
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    padding: 2em 0 1em 0;
+}
