Auth0 Login Integration (#23)
* Hold...

* Auth0 Login is working

Footer needs to stay sticky to the bottom. Edit page is not so nice.

* Cleaning up some file organization and css

* NavMenu using Auth0 User Info

* removing commented code

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -8,8 +8,31 @@
     --secondary_hover: #558e91;
 }
 
-.header {
+#root {
+    position: relative;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#footer {
     background-color: var(--title);
+    height: 5rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    padding: 2em 0;
+    text-align: center;
+}
+
+#header {
+    background-color: var(--title);
+}
+
+#app > .container {
+    padding-bottom: 2em;
+    margin-bottom: 5em;
 }
 
 .row > .container > .card_bg {
@@ -53,7 +76,19 @@
 }
 
 .dropdown-menu {
-    height: 30em;
     max-height: 55svh;
     overflow-y: scroll;
+}
+
+.spinner {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
